# ros2-client

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: audit.yml  tests-zenoh.yml
docs/decisions/: 0001-record-architecture-decisions.md  0002-dual-backend-compile-time-feature-selection.md  0003-reuse-cdr-serialization.md  0004-owned-public-types.md  0005-discovery-via-liveliness-tokens.md  0006-services-over-queryable-get.md  0007-type-hash-interop-strategy.md  0008-gid-and-attachment-byte-parity.md  0009-zenoh-router-and-config.md
docs/zenoh_study/: README.md  feature_map.md  interop_runbook.md  issues.md  refactoring_plan.md  test_plan.md
docs/zenoh_study/research/: rmw_zenoh.md  ros2_client_internals.md  workshop_use_cases.md  zenoh_api.md
examples/zenoh_demo/: main.rs
src/: lib.rs  log.rs  names.rs  parameters.rs  qos.rs  rcl_interfaces.rs  ros_time.rs
src/zenoh_backend/: action.rs  attachment.rs  cdr.rs  context.rs  gid.rs  graph_cache.rs  keyexpr.rs  mod.rs  node.rs  parameters.rs  pubsub.rs  qos_encoding.rs  rosout.rs  service.rs  type_description.rs  type_hash.rs
tests/: pub_and_sub.rs
